--- a/HTML/home.html
+++ b/HTML/home.html
@@ -7,6 +7,8 @@
     <title>Landing-page</title>
 </head>
 <body>
-    Welcome
+    <nav>
+        Welcome to our project
+    </nav>
 </body>
 </html>
