--- a/HTML/home.html
+++ b/HTML/home.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     
     <link href="../CSS/home.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
   <body>
     <header>
@@ -56,7 +56,7 @@
                 </div>
             </div>
 
-            <div class="row image-row align-items-center justify-items-center">
+            <div class="row image-row align-items-center justify-content-center">
                 <div class="col-md-6" style="position: relative;">
                     <img src="../IMAGES/ALU1.jpg" alt="ALU" class="img-fluid picture-ALU">
                     <img src="../IMAGES/ALU2.jpg" class="ALU images-ALU">
@@ -80,17 +80,17 @@
         <div class="container-md">
             <div class="row">
                 <div class="col-md-6 member1">
-                    <img src="../IMAGES/K1.jpg" alt="Kevin" class="img-fluid members-pictures">
+                    <img src="../IMAGES/Kein.jpg" alt="Kevin" class="img-fluid members-pictures">
                     <p class="member mt-2">Hi, I am Kevin (Who you are)</p>
                     <p class="mt-4">
-                        <a href="#" class="btn btn-info story-button">View Story</a>
+                        <a href="#" class="btn btn-dark story-button">View Story</a>
                     </p>
                 </div>
                 <div class="col-md-6 member2">
-                    <img src="../IMAGES/J2.png" alt="Jossy" class="img-fluid members-pictures">
+                    <img src="../IMAGES/JOSSY.jpeg" alt="Jossy" class="img-fluid members-pictures">
                     <p class="member mt-2">Hi, I am Jossy (Who you are)</p>
                     <p class="mt-4">
-                        <a href="#" class="btn btn-primary story-button">View Story</a>
+                        <a href="#" class="btn btn-dark story-button">View Story</a>
                     </p>
                 </div>
             </div>
@@ -98,7 +98,7 @@
 
         <div class="row">
             <div class="col-md-12 member3">
-                <img src="../IMAGES/DE.jpg" alt="Debbie" class="img-fluid members-pictures">
+                <img src="../IMAGES/DEE.jpg" alt="Debbie" class="img-fluid members-pictures">
                     <p class="member mt-2">Hi, I am Deborah (a creative and dynamic person)</p>
                     <p class="mt-4">
                         <a href="#" class="btn btn-dark story-button">View Story</a>
@@ -111,19 +111,32 @@
                 <img src="../IMAGES/JU.jpg" alt="Justus" class="img-fluid members-pictures">
                 <p class="member mt-2">Hi, I am Justus (Who you are)</p>
                 <p class="mt-4">
-                    <a href="#" class="btn btn-danger story-button">View Story</a>
+                    <a href="#" class="btn btn-dark story-button">View Story</a>
                 </p>
             </div>
             <div class="col-md-6 member5">
                 <img src="../IMAGES/MA.jpg" alt="Manga" class="img-fluid members-pictures">
                 <p class="member mt-2">Hi, I am Manga (Who you are)</p>
                 <p class="mt-4">
-                    <a href="#" class="btn btn-success story-button">View Story</a>
+                    <a href="#" class="btn btn-dark story-button">View Story</a>
                 </p>
             </div>
         </div>
 
     </div>
+
+    <footer>
+        <div class="jumbotron footer-jumbotron">
+            <div class="container-md">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3>MADE WITH LOVE</h3>
+                        <p class="mt-3">GROUP 2</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
 </html>
