--- a/HTML/home.html
+++ b/HTML/home.html
@@ -81,14 +81,14 @@
             <div class="row">
                 <div class="col-md-6 member1">
                     <img src="../IMAGES/Kein.jpg" alt="Kevin" class="img-fluid members-pictures">
-                    <p class="member mt-2">Hi, I am Kevin (Who you are)</p>
+                    <p class="member mt-2">Hi, I am Kevin (an explorer)</p>
                     <p class="mt-4">
                         <a href="#" class="btn btn-dark story-button">View Story</a>
                     </p>
                 </div>
                 <div class="col-md-6 member2">
                     <img src="../IMAGES/JOSSY.jpeg" alt="Jossy" class="img-fluid members-pictures">
-                    <p class="member mt-2">Hi, I am Jossy (Who you are)</p>
+                    <p class="member mt-2">Hi, I am Jossy (an easy going person and likes an educator)</p>
                     <p class="mt-4">
                         <a href="#" class="btn btn-dark story-button">View Story</a>
                     </p>
