--- a/HTML/home.html
+++ b/HTML/home.html
@@ -115,8 +115,8 @@
                 </p>
             </div>
             <div class="col-md-6 member5">
-                <img src="../IMAGES/MA.jpg" alt="Manga" class="img-fluid members-pictures">
-                <p class="member mt-2">Hi, I am Manga (Who you are)</p>
+                <img src="../IMAGES/M1.jpeg" alt="Manga" class="img-fluid members-pictures">
+                <p class="member mt-2">Hi, I am Manga (en enigma)</p>
                 <p class="mt-4">
                     <a href="#" class="btn btn-dark story-button">View Story</a>
                 </p>
