--- a/HTML/home.html
+++ b/HTML/home.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-6 member2">
                     <img src="../IMAGES/JOSSY.jpeg" alt="Jossy" class="img-fluid members-pictures">
-                    <p class="member mt-2">Hi, I am Jossy (an easy going person and likes an educator)</p>
+                    <p class="member mt-2">Hi, I am Jossy (an easy going person and like educators)</p>
                     <p class="mt-4">
                         <a href="#" class="btn btn-dark story-button">View Story</a>
                     </p>
@@ -131,7 +131,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3>MADE WITH LOVE</h3>
-                        <p class="mt-3">GROUP 2</p>
+                        <p class="mt-3">&copy; 2022 GROUP 2</p>
                     </div>
                 </div>
             </div>
