--- a/HTML/home.html
+++ b/HTML/home.html
@@ -28,10 +28,10 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#">Deborah Ama Paintsil</a></li>
-                      <li><a class="dropdown-item" href="#">Jossy</a></li>
-                      <li><a class="dropdown-item" href="#">Justus</a></li>
-                      <li><a class="dropdown-item" href="#">Manga</a></li>
-                      <li><a class="dropdown-item" href="#">Kevin</a></li>
+                      <li><a class="dropdown-item" href="#">Josephine Ekhator</a></li>
+                      <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
+                      <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
+                      <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -116,7 +116,7 @@
             </div>
             <div class="col-md-6 member5">
                 <img src="../IMAGES/M1.jpeg" alt="Manga" class="img-fluid members-pictures">
-                <p class="member mt-2">Hi, I am Manga (en enigma)</p>
+                <p class="member mt-2">Hi, I am Manga (an enigma)</p>
                 <p class="mt-4">
                     <a href="#" class="btn btn-dark story-button">View Story</a>
                 </p>
