--- a/HTML/home.html
+++ b/HTML/home.html
@@ -83,14 +83,14 @@
                     <img src="../IMAGES/Kein.jpg" alt="Kevin" class="img-fluid members-pictures">
                     <p class="member mt-2">Hi, I am Kevin (an explorer)</p>
                     <p class="mt-4">
-                        <a href="#" class="btn btn-dark story-button">View Story</a>
+                        <a href="#" class="btn btn-outline-dark story-button">View Story</a>
                     </p>
                 </div>
                 <div class="col-md-6 member2">
                     <img src="../IMAGES/JOSSY.jpeg" alt="Jossy" class="img-fluid members-pictures">
                     <p class="member mt-2">Hi, I am Jossy (an easy going person and like educators)</p>
                     <p class="mt-4">
-                        <a href="#" class="btn btn-dark story-button">View Story</a>
+                        <a href="#" class="btn btn-outline-dark story-button">View Story</a>
                     </p>
                 </div>
             </div>
@@ -101,30 +101,31 @@
                 <img src="../IMAGES/DEE.jpg" alt="Debbie" class="img-fluid members-pictures">
                     <p class="member mt-2">Hi, I am Deborah (a creative and dynamic person)</p>
                     <p class="mt-4">
-                        <a href="#" class="btn btn-dark story-button">View Story</a>
+                        <a href="#" class="btn btn-outline-dark story-button">View Story</a>
                     </p>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-6 member4">
-                <img src="../IMAGES/JU.jpg" alt="Justus" class="img-fluid members-pictures">
+                <img src="../IMAGES/Justus.jpg" alt="Justus" class="img-fluid members-pictures">
                 <p class="member mt-2">Hi, I am Justus (Who you are)</p>
                 <p class="mt-4">
-                    <a href="#" class="btn btn-dark story-button">View Story</a>
+                    <a href="#" class="btn btn-outline-dark story-button">View Story</a>
                 </p>
             </div>
             <div class="col-md-6 member5">
                 <img src="../IMAGES/M1.jpeg" alt="Manga" class="img-fluid members-pictures">
                 <p class="member mt-2">Hi, I am Manga (an enigma)</p>
                 <p class="mt-4">
-                    <a href="#" class="btn btn-dark story-button">View Story</a>
+                    <a href="#" class="btn btn-outline-dark story-button">View Story</a>
                 </p>
             </div>
         </div>
 
     </div>
 
+    <br>
     <footer>
         <div class="jumbotron footer-jumbotron">
             <div class="container-md">
