--- a/HTML/home.html
+++ b/HTML/home.html
@@ -51,7 +51,7 @@
     <div class="jumbotron journey-begin-jumbotron">
         <div class="container-md">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 began">
                     <h3>The Beginning</h3>
                 </div>
             </div>
