--- a/HTML/home.html
+++ b/HTML/home.html
@@ -27,7 +27,7 @@
                       Our Stories
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Deborah Ama Paintsil</a></li>
+                      <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
                       <li><a class="dropdown-item" href="#">Josephine Ekhator</a></li>
                       <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
                       <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
