--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -7,11 +7,54 @@
     <title>DEBBIE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     
+    <link href="../CSS/story1.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"><img src="../IMAGES/logo.jpeg" alt="logo" class="navbar-logo"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="../HTML/home.html">Home</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Our Stories
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
+                      <li><a class="dropdown-item" href="#">Josephine Ekhator</a></li>
+                      <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
+                      <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
+                      <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+          <div class="jumbotron intro-jumbotron align-items-center justify-content-center">
+            <div class="container-md">
+                <div class="row">
+                    <div class="col-md-6 text">
+                        <h3>Hi!, I am Deborah</h3>
+                        <p>This is a journey of a lifetime</p>
+                        <p>Sit, relax and enjoy the lifetime of an incoming personality you can never imagine</p>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="../IMAGES/DEE.jpg" alt="Deborah" class="img-fluid Debbie-pic">
+                    </div>
+                </div>
+            </div>
+
+          </div>
     </header>
 </body>
 </html>
