--- a/HTML/home.html
+++ b/HTML/home.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-md">
-              <a class="navbar-brand" href="#"><img src="../IMAGES/logo.jpeg" alt="logo" class="navbar-logo"></a>
+              <a class="navbar-brand" href="../HTML/home.html"><img src="../IMAGES/logo.jpeg" alt="logo" class="navbar-logo"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
