--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -46,15 +46,39 @@
                     <div class="col-md-6 text">
                         <h3>Hi!, I am Deborah</h3>
                         <p>This is a journey of a lifetime</p>
-                        <p>Sit, relax and enjoy the lifetime of an incoming personality you can never imagine</p>
+                        <p>Sit, relax and enjoy the lifetime of an incoming personality 
+                            you can never imagine</p>
                     </div>
                     <div class="col-md-6">
-                        <img src="../IMAGES/DEE.jpg" alt="Deborah" class="img-fluid Debbie-pic">
+                       <div class="ps-5">
+                        <img src="../IMAGES/Deb3.jpg" alt="Deborah" class="img-fluid Debbie-pic">
+                       </div>
                     </div>
                 </div>
             </div>
 
           </div>
     </header>
+
+    <div class="jumbotron body-jumbotron">
+        <div class="container-md">
+            <div class="row">
+                <div class="col-md-12">
+                    <h3>Background</h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3"></div>
+                <div class="col-md-6">
+                    <p class="mt-5 background">I am Deborah Ama Paintsil, a daughter to Mr and Mrs Mensah Paintsil <br>
+                       I am the third child of my six siblings <br>
+                       I love nature and everything that is very creative <br>
+                    </p>
+                </div>
+                <div class="col-md-3"></div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
