--- a/HTML/home.html
+++ b/HTML/home.html
@@ -34,6 +34,9 @@
                       <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                     </ul>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">The Author</a>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -68,7 +71,7 @@
                     True or not!!
                     We realized that we can become a pillar that will define our world some day!!</p>
                     <p class="mt-4">
-                        <a href="#" class="btn btn-outline-warning stories-button">The Stories</a>
+                        <a href="#" class="btn btn-outline-warning stories-button">The Author</a>
                     </p>
                  </div>
                 </div>
