--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -35,6 +35,9 @@
                       <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                     </ul>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">The Author</a>
+                  </li>
                 </ul>
               </div>
             </div>
