--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IP-G2</title>
+    <title>Landing Page</title>
     <link rel="stylesheet" href="../CSS/index.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-</head>
+
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <section class="section1">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-md">
-                  <a class="navbar-brand" href="../HTML/home.html"><h2 class="logo">IP-G2</h2></a>
+                  <a class="navbar-brand" href="../HTML/index.html"><h2 class="logo">IP-G2</h2></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
