--- a/HTML/index.html
+++ b/HTML/index.html
@@ -126,7 +126,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <h3>MADE WITH LOVE</h3>
-                                <p class="mt-3">&copy; All Rights Reserved 2022 GROUP 2</p>
+                                <p class="mt-3">&copy; 2022 GROUP 2, All Rights Reserved</p>
                         </div>
                         </div>
                     </div>
