--- a/HTML/index.html
+++ b/HTML/index.html
@@ -99,19 +99,19 @@
                 <div class="slide">
 
                     <div class="hexagon hex1">
-                        <h2 class="desc">Deborah</h2>
+                        <a href="../HTML/story1.html"><h2 class="desc">Deborah</h2></a>
                     </div>
                     <div class="hexagon hex2">
-                        <h2 class="desc">Josephine</h2>
+                        <a href=""><h2 class="desc">Josephine</h2></a>
                     </div>
                     <div class="hexagon hex3">
-                        <h2 class="desc">Kevin</h2>
+                        <a href=""><h2 class="desc">Kevin</h2></a>
                     </div>
                     <div class="hexagon hex4">
-                        <h2 class="desc">Justus</h2>
+                        <a href=""><h2 class="desc">Justus</h2></a>
                     </div>
                     <div class="hexagon hex5">
-                        <h2 class="desc">Mangaliso</h2>
+                        <a href=""><h2 class="desc">Mangaliso</h2></a>
                     </div>
                 </div>
             </div>
