--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -12,37 +12,47 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="../IMAGES/logo.jpeg" alt="logo" class="navbar-logo"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../HTML/index.html">Home</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Our Stories
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
-                      <li><a class="dropdown-item" href="#">Josephine Ekhator</a></li>
-                      <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
-                      <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
-                      <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">The Author</a>
-                  </li>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-md">
+          <a class="navbar-brand" href="../HTML/index.html"><h2 class="logo">IP-G2</h2></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../HTML/index.html">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Our Stories
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
+                  <li><a class="dropdown-item" href="#">Josephine Ekhator</a></li>
+                  <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
+                  <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
+                  <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
                 </ul>
-              </div>
-            </div>
-          </nav>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">The Author</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
+
+    <div class="jumbotron body-jumbotron">
+       <div class="conatiner-md">
+        <div class="row">
+          <div class="col-md-4"></div>
+          <div class="col-md-4"></div>
+          <div class="col-md-4"></div>
+        </div>
+       </div>
+    </div>
 
 </body>
 </html>
