--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DEBBIE</title>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Deborah's Story</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    
+ 
     <link href="../CSS/story1.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-</head>
-<body>
+  </head>
+  <body>
     <header>
       <nav class="navbar navbar-expand-lg">
         <div class="container-md">
@@ -28,7 +26,7 @@
                   Our Stories
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
+                  <li><a class="dropdown-item" href="#">Deborah Ama Paintsil</a></li>
                   <li><a class="dropdown-item" href="#">Josephine Ekhator</a></li>
                   <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
                   <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
@@ -36,7 +34,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">The Author</a>
+                <a class="nav-link">The Author</a>
               </li>
             </ul>
           </div>
@@ -44,15 +42,15 @@
       </nav>
     </header>
 
-    <div class="jumbotron body-jumbotron">
-       <div class="conatiner-md">
+    <div class="jumbotron">
+      <div class="container-md">
         <div class="row">
           <div class="col-md-4"></div>
           <div class="col-md-4"></div>
           <div class="col-md-4"></div>
         </div>
-       </div>
+      </div>
     </div>
-
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+  </body>
 </html>
