--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -7,6 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
  
     <link href="../CSS/story1.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -42,10 +44,81 @@
       </nav>
     </header>
 
-    <div class="jumbotron">
+    <div class="jumbotron body-jumbotron">
       <div class="container-md">
         <div class="row">
-          <div class="col-md-4"></div>
+          <div class="col-md-4">
+            <div class="p-3 storycards">
+                <img src="../IMAGES/Deb3.jpg" class="img-fluid">
+                <p class="mt-5">Hi, I am Deborah Ama Paintsil, a computing student of the African Leadership University, Mauritius <br>
+                      I am dynamic and creative person who loves nature and passionate about things that makes me grow
+                </p>
+                <p class="mt-5">
+                  <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                  <a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                  <a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
+                  <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>    
+                </p>
+            </div>
+          </div>
+          <div class="col-md-4">
+              <div class="p-3 storycards">
+                <img src="../IMAGES/ALU.png" class="ALU-logo">
+                <img src="../IMAGES/ALU1.jpg" class="img-fluid">
+                <p class="mt-5">
+                    I was looking for scholarships because I did not hear from the Indian institution I applied to due to the covid-19 pandemic 
+                    that started. I saw an advertisement about a school that is inspiring to raise young African leaders and I started reading 
+                    about it because I was curious to know more. <br>
+                    I took the test that I saw after reading and later received an email talking about how they like my drive and passion.
+                    I felt this is an institution that has been able to identify the needs of an individual through a test. And so, i decided to apply to study there <br>
+                    It has always been my dream to help the people in my community and country at large, so after reading the dreams and goal of the school, 
+                    I realized I have found an institution that can help me achieve my dream and even give me better ideas on how to do it. <br>
+                    The application process was not that difficult to follow, the various instructions that was given made it easier to apply. <br>
+                    I was so excited and happy when I got an email informing me about my admission. It was like a dream come true.
+                  </p>
+                  <h3 class="mt-5">Life At ALU</h3>
+                  <p>
+                    Because of the Covid-19 pandemic, we had to travel to Mauritius in January, 2021 instead of September, 2020.
+                    It was quite a fascinating situation because we had to do some few lessons online from September to December, 2020 where 
+                    learnt about certain things of ALU and how to use learning materials provided by the institution. <br>
+                    I had to be in quarantine in a country i had no idea about and it was suffocating especially because of the inability to go out and explore the place.
+                    After the quarantine for 2 weeks, I was able to meet other students and we were transported from the hotel to the school. <br>
+                    Seeing the school for the first time was not what i expected. 
+                    Because I was attending a university, which was the biggest in Ghana, I was a bit disaapointed about the spaces but seeing the facilities and structures
+                    was wonderful and the interactions I had with various students was more welcoming than I thought. <br>
+                    From starting classes, the facilitators had a welcoming face and encourages us by helping whenever we needed them.
+                    We had leassons on Leadership Core with courses such as Data & Decisions, Communicating for Impact, Enterpreneurial leadership which gave me lessons on 
+                    how to be a leader with empathy and projects which gave me an opportunity to work on real life situations with my peers. <br>
+                    My advice to prospective is that they should embrace themselves for self learning and also make good use of all the opportunities given to them. 
+                  </p>
+
+              </div>
+          </div>
+          <div class="col-md-4">
+            <div class="p-3 storycards">
+              <h3>Social Life</h3>
+              <p>
+                I can sometimes be seen as a boring person because I love to be by myself either watching a movie or doing some basic stuffs.
+                So far I have tried to become more sociable rather than being an introvert. <br>
+                Most people tend to think I am an introvert and others too an extrovert.
+                I love spending time alone and doing things that excite me the most. 
+                But I have some social life that includes both personal and professional interactions.
+                I see it as an element of learning, joy, self-fulfillment and personal resilience.
+                I love working as a team with my peers groups and friends because I see it as a way of learning from people.
+                I spend time with friends, example friends with the same interest as me.
+                I love to listen to people so I can hear diverse ideas of people about life.
+              </p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-4">
+            <div class="storycards">
+              <h3>Background</h3>
+            </div>
+          </div>
           <div class="col-md-4"></div>
           <div class="col-md-4"></div>
         </div>
