--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -48,9 +48,12 @@
       <div class="container-md">
         <div class="row">
           <div class="col-md-4">
-            <div class="p-3 storycards">
-                <img src="../IMAGES/Deb3.jpg" class="img-fluid">
-                <p class="mt-5">Hi, I am Deborah Ama Paintsil, a computing student of the African Leadership University, Mauritius <br>
+            <div class="card" style="width: 22rem;">
+              <img src="../IMAGES/Deb3.jpg" class="card-img-top img-fluid" alt="Deborah">
+              <div class="card-body">
+                <h5 class="card-title text-center py-2">About Me</h5>
+                <p class="card-text">
+                      Hi, I am Deborah Ama Paintsil, a computing student of the African Leadership University, Mauritius <br>
                       I am dynamic and creative person who loves nature and passionate about things that makes me grow
                 </p>
                 <p class="mt-5">
@@ -59,6 +62,7 @@
                   <a href="#"><i class="fa fa-telegram" aria-hidden="true"></i></a>
                   <a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>    
                 </p>
+              </div>
             </div>
           </div>
           <div class="col-md-4">
