--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -44,7 +44,7 @@
       </nav>
     </header>
 
-    <div class="jumbotron body-jumbotron">
+    <div class="jumbotron body-jumbotron py-5">
       <div class="container-md">
         <div class="row">
           <div class="col-md-4">
@@ -64,6 +64,7 @@
                 </p>
               </div>
             </div>
+            
           </div>
           <div class="col-md-4">
               <div class="p-3 storycards">
