created a glass storycard

--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -85,16 +85,17 @@
     <div class="container py-2">
       <div class="row" data-masonry='{"percentPosition": true }'>
         <div class="col-sm-4 col-md-4 py-3 ">
-          <div class="card  border-primary">
-            <div class="card-body storycards">
+           <div class="card cb1 text-center">
+            <div class="card-body">
+              <span class="card-number fw-bold">01</span>
               <img src="../IMAGES/Deb3.jpg" class="img-fluid" />
-              <p class="mt-5">
+                <h5 class="card-title py-3">About Me</h5>
+                <p>
                 Hi, I am Deborah Ama Paintsil, a computing student of the
                 African Leadership University, Mauritius <br />
                 I am dynamic and creative person who loves nature and passionate
                 about things that makes me grow
               </p>
-              <p class="mt-5">
                 <a href="#"
                   ><i class="fa fa-facebook-official" aria-hidden="true"></i
                 ></a>
@@ -107,17 +108,18 @@
                 <a href="#"
                   ><i class="fa fa-linkedin-square" aria-hidden="true"></i
                 ></a>
-              </p>
             </div>
             
-          </div>
+          </div> 
         </div>
         <div class="col-sm-4 col-md-4 py-3">
-          <div class="card border-primary">
-            <div class="card-body storycards">
+          <div class="card cb2">
+            <div class="card-body">
+              <span class="card-number fw-bold">04</span>
               <img src="../IMAGES/ALU.png" class="ALU-logo" />
               <img src="../IMAGES/ALU1.jpg" class="img-fluid" />
-              <p class="mt-5">
+              <h5 class="card-title py-3">Before ALU</h5>
+              <p class="mt-2">
                 I was looking for scholarships because I did not hear from the
                 Indian institution I applied to due to the covid-19 pandemic
                 that started. I saw an advertisement about a school that is
@@ -139,7 +141,7 @@
                 I was so excited and happy when I got an email informing me
                 about my admission. It was like a dream come true.
               </p>
-              <h3 class="mt-5">Life At ALU</h3>
+              <h5 class="card-title py-3">Life At ALU</h5>
               <p>
                 Because of the Covid-19 pandemic, we had to travel to Mauritius
                 in January, 2021 instead of September, 2020. It was quite a
@@ -173,9 +175,10 @@
           </div>
         </div>
         <div class="col-sm-4 col-md-4 py-3">
-          <div class="card border-primary">
-            <div class="card-body storycards">
-              <h3>Social Life</h3>
+          <div class="card cb1">
+            <div class="card-body ">
+              <span class="card-number fw-bold">05</span>
+              <h5 class="card-title py-3">Social Life</h5>
               <p>
                 I can sometimes be seen as a boring person because I love to be
                 by myself either watching a movie or doing some basic stuffs. So
