--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -171,6 +171,7 @@
                 for self learning and also make good use of all the
                 opportunities given to them.
               </p>
+              <a href="#" class="btn btn-primary">Resume</a>
             </div>
           </div>
         </div>
@@ -199,9 +200,10 @@
           </div>
         </div>
         <div class="col-sm-4 col-md-4 py-3">
-          <div class="card border-primary">
+          <div class="card cb2">
             <div class="card-body storycards">
-              <h3>Social Life</h3>
+              <span class="card-number fw-bold">02</span>
+              <h5 class="card-title py-3">Background</h5>
               <p>
                 I can sometimes be seen as a boring person because I love to be
                 by myself either watching a movie or doing some basic stuffs. So
@@ -211,6 +213,12 @@
                 extrovert. I love spending time alone and doing things that
                 excite me the most. But I have some social life that includes
                 both personal and professional interactions. I see it as an
+                element of learning, joy, self-fulfillment and personal
+                resilience. I love working as a team with my peers groups and
+                friends because I see it as a way of learning from people. I
+                spend time with friends, example friends with the same interest
+                as me. I love to listen to people so I can hear diverse ideas of
+                people about life.
                 element of learning, joy, self-fulfillment and personal
                 resilience. I love working as a team with my peers groups and
                 friends because I see it as a way of learning from people. I
@@ -222,9 +230,10 @@
           </div>
         </div>
         <div class="col-sm-4 col-md-4 py-3">
-          <div class="card border-primary">
-            <div class="card-body storycards">
-              <h3>Social Life</h3>
+          <div class="card cb1">
+            <div class="card-body">
+              <span class="card-number fw-bold">06</span>
+              <h5 class="card-title py-3">Ideas For the Future & Careers</h5>
               <p>
                 I can sometimes be seen as a boring person because I love to be
                 by myself either watching a movie or doing some basic stuffs. So
@@ -240,14 +249,39 @@
                 spend time with friends, example friends with the same interest
                 as me. I love to listen to people so I can hear diverse ideas of
                 people about life.
+              </p>
+              <h5 class="card-title py-3">Ideas for Future</h5>
+              <p>
+                Because of the Covid-19 pandemic, we had to travel to Mauritius
+                in January, 2021 instead of September, 2020. It was quite a
+                fascinating situation because we had to do some few lessons
+                online from September to December, 2020 where learnt about
+                certain things of ALU and how to use learning materials provided
+                by the institution. <br />
+                I had to be in quarantine in a country i had no idea about and
+                it was suffocating especially because of the inability to go out
+                and explore the place. I can sometimes be seen as a boring person because I love to be
+                by myself either watching a movie or doing some basic stuffs. So
+                far I have tried to become more sociable rather than being an
+                Most people tend to think I am an introvert and others too an
+                extrovert. I love spending time alone and doing things that
+                excite me the most. But I have some social life that includes
+                both personal and professional interactions. I see it as an
+                element of learning, joy, self-fulfillment and personal
+                resilience. I love working as a team with my peers groups and
+                friends because I see it as a way of learning from people. I
+                spend time with friends, example friends with the same interest
+                as me. I love to listen to people so I can hear diverse ideas of
+                
               </p>
             </div>
           </div>
         </div>
         <div class="col-sm-4 col-md-4 py-3">
-          <div class="card border-primary">
-            <div class="card-body storycards">
-              <h3>Social Life</h3>
+          <div class="card cb1">
+            <div class="card-body">
+              <span class="card-number fw-bold">03</span>
+              <h5 class="card-title py-3">My Country</h5>
               <p>
                 I can sometimes be seen as a boring person because I love to be
                 by myself either watching a movie or doing some basic stuffs. So
@@ -261,11 +295,28 @@
                 resilience. I love working as a team with my peers groups and
                 friends because I see it as a way of learning from people. I
                 spend time with friends, example friends with the same interest
-                as me. I love to listen to people so I can hear diverse ideas of
-                people about life.
+                
               </p>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="jumbotron comment-jumbotron">
+      <div class="container-md">
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-8">
+            <h3 class="text-center">Comment and Connect</h3>
+            <div class="contact-form">
+              <input type="text" placeholder="Name">
+              <input type="text" placeholder="Email">
+              <input type="text" placeholder="Message">
+              <button type="button" class="btn btn-outline-warning">Send</button>
+          </div>
+          </div>
+          <div class="col-md-2"></div>
         </div>
       </div>
     </div>
