--- a/HTML/index.html
+++ b/HTML/index.html
@@ -32,7 +32,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                           <li><a class="dropdown-item" href="../HTML/story1.html">Deborah Ama Paintsil</a></li>
-                          <li><a class="dropdown-item" href="#">Josephine Ekhator</a></li>
+                          <li><a class="dropdown-item" href="#">Josephine Nation Ekhator</a></li>
                           <li><a class="dropdown-item" href="#">Justus Wamswa Chemirmir</a></li>
                           <li><a class="dropdown-item" href="#">Mangaliso Dlamini</a></li>
                           <li><a class="dropdown-item" href="#">Kevin Langat</a></li>
