--- a/HTML/story1.html
+++ b/HTML/story1.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
 
-    <link href="../CSS/story1.css" rel="stylesheet" />
+    <link href="../CSS/story1.css" rel="stylesheet"/>
 
     <link
       rel="stylesheet"
@@ -60,12 +60,11 @@
                     <a class="dropdown-item" href="#">Deborah Ama Paintsil</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Josephine Ekhator</a>
+                    <a class="dropdown-item" href="#">Josephine Nation Ekhator</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="#"
-                      >Justus Wamswa Chemirmir</a
-                    >
+                      >Justus Wamswa Chemirmir</a>
                   </li>
                   <li>
                     <a class="dropdown-item" href="#">Mangaliso Dlamini</a>
@@ -82,7 +81,7 @@
       </nav>
     </header>
 
-    <div class="container py-3">
+    <div class="container py-2">
       <div class="row" data-masonry='{"percentPosition": true }'>
         <div class="col-sm-4 col-md-4 py-3 ">
            <div class="card cb1 text-center">
