--- a/HTML/story2.html
+++ b/HTML/story2.html
@@ -42,6 +42,21 @@
       </nav>
     </section>
   </main>
+
+  <div class="container">
+    <div class="card-columns">
+      <div class="card">
+        <img src="../IMAGES/ALU1.jpg" class="card-img-top" alt="card image">
+        <div class="card-body">
+          <div class="card-title"> card title</div>
+          <p class="card-text">
+            Powerful, extensible, and feature-packed frontend toolkit.
+            Build and customize with Sass.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
   
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
